add: switch button animation

--- a/style.css
+++ b/style.css
@@ -80,11 +80,12 @@ body * {
     left: 0;
     z-index: 1;
     transform: translateY(-50%);
+
+    animation: slide-back 0.3s;
 }
 
 .light #switch button {
-    left: initial;
-    right: 0;
+    animation: slide-in 0.3s forwards;
 }
 
 #switch span {
@@ -179,5 +180,28 @@ footer {
 
     .light {
         --bg-url: url(./assets/bg-desktop-light.jpg);
+    }
+}
+
+/* animation */ 
+
+@keyframes slide-in {
+    from {
+        left: 0;;
+    }
+
+    to {
+        left: 50%;
+    }
+}
+
+@keyframes slide-back {
+
+    from {
+        left: 50%;
+    }
+
+    to {
+        left: 0%;
     }
 }
