--- a/style.css
+++ b/style.css
@@ -88,6 +88,10 @@ body * {
     animation: slide-in 0.3s forwards;
 }
 
+#switch button:hover { 
+    outline: 8px solid var(--highlight-color);
+}
+
 #switch span {
     display: block;
     width: 64px;
